tests/good/records.pas
type a=record x:integer; end;

var lol:a;
begin
lol.x:=5;
end.
