tests/bad/int4.pas
program int;
var
:integer;
begin

end.
